--- a/community.html
+++ b/community.html
@@ -32,6 +32,7 @@
                 <a href="features.html">Features</a>
                 <a href="community.html" style="color: var(--primary);">Community</a>
                 <a href="rankings.html">Rankings</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="download.html">Download</a>
             </div>
             <a href="download.html" class="btn btn-primary">Get Started</a>
@@ -152,12 +153,11 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <p style="font-style: italic; margin-bottom: 1.5rem;">"RacketRank transformed my tennis game. I've
-                        found amazing playing partners and my rating has improved by 200 points in just 3 months!"</p>
+                        found amazing playing partners and my ranking has improved significantly in just 3 months!"</p>
                     <div style="display: flex; align-items: center; gap: 1rem;">
-                        <img src="assets/pp1.jpg" alt="Player" style="width: 50px; height: 50px; border-radius: 50%;">
+                        <div style="width: 50px; height: 50px; border-radius: 50%; background: rgba(204, 255, 0, 0.2); display: flex; align-items: center; justify-content: center; color: var(--primary); font-weight: 600; font-size: 0.9rem; border: 1px solid rgba(204, 255, 0, 0.3);">S.M</div>
                         <div>
-                            <p style="margin: 0; font-weight: 600; color: #fff;">Sarah M.</p>
-                            <p style="margin: 0; font-size: 0.9rem;">Rating: 1450</p>
+                            <p style="margin: 0; font-weight: 600; color: #fff;">Sarah</p>
                         </div>
                     </div>
                 </div>
@@ -166,10 +166,9 @@
                     <p style="font-style: italic; margin-bottom: 1.5rem;">"The best tennis app out there. The community
                         is friendly, the ranking system is fair, and I always find matches at my level."</p>
                     <div style="display: flex; align-items: center; gap: 1rem;">
-                        <img src="assets/pp2.jpg" alt="Player" style="width: 50px; height: 50px; border-radius: 50%;">
+                        <div style="width: 50px; height: 50px; border-radius: 50%; background: rgba(204, 255, 0, 0.2); display: flex; align-items: center; justify-content: center; color: var(--primary); font-weight: 600; font-size: 0.9rem; border: 1px solid rgba(204, 255, 0, 0.3);">J.K</div>
                         <div>
-                            <p style="margin: 0; font-weight: 600; color: #fff;">James K.</p>
-                            <p style="margin: 0; font-size: 0.9rem;">Rating: 1620</p>
+                            <p style="margin: 0; font-weight: 600; color: #fff;">James</p>
                         </div>
                     </div>
                 </div>
@@ -178,10 +177,9 @@
                     <p style="font-style: italic; margin-bottom: 1.5rem;">"I moved to a new city and RacketRank helped
                         me find a whole new tennis community. Now I play 3 times a week!"</p>
                     <div style="display: flex; align-items: center; gap: 1rem;">
-                        <img src="assets/pp3.jpg" alt="Player" style="width: 50px; height: 50px; border-radius: 50%;">
+                        <div style="width: 50px; height: 50px; border-radius: 50%; background: rgba(204, 255, 0, 0.2); display: flex; align-items: center; justify-content: center; color: var(--primary); font-weight: 600; font-size: 0.9rem; border: 1px solid rgba(204, 255, 0, 0.3);">M.L</div>
                         <div>
-                            <p style="margin: 0; font-weight: 600; color: #fff;">Maria L.</p>
-                            <p style="margin: 0; font-size: 0.9rem;">Rating: 1280</p>
+                            <p style="margin: 0; font-weight: 600; color: #fff;">Maria</p>
                         </div>
                     </div>
                 </div>
@@ -219,6 +217,7 @@
                     <ul>
                         <li><a href="features.html">Features</a></li>
                         <li><a href="rankings.html">Rankings</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="download.html">Download</a></li>
                     </ul>
                 </div>
@@ -244,6 +243,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 
