--- a/download.html
+++ b/download.html
@@ -33,6 +33,7 @@
                 <a href="features.html">Features</a>
                 <a href="community.html">Community</a>
                 <a href="rankings.html">Rankings</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="download.html" style="color: var(--primary);">Download</a>
             </div>
             <a href="#download-section" class="btn btn-primary">Get Started</a>
@@ -61,8 +62,6 @@
                     <p style="margin-top: 2rem; font-size: 0.9rem; color: var(--text-muted);">
                         <i class="fa-solid fa-check" style="color: var(--primary);"></i> Free to download
                         <span style="margin: 0 1rem;">•</span>
-                        <i class="fa-solid fa-check" style="color: var(--primary);"></i> No credit card required
-                        <span style="margin: 0 1rem;">•</span>
                         <i class="fa-solid fa-check" style="color: var(--primary);"></i> Start playing instantly
                     </p>
                 </div>
@@ -88,7 +87,7 @@
                         <i class="fa-solid fa-trophy"></i>
                     </div>
                     <h3>Track Your Rankings</h3>
-                    <p>See your progress with our ELO-based ranking system. Compete locally and globally.</p>
+                    <p>See your progress with our proprietary ranking system. Based on match results, player statistics, and competitive performance, our objective system ensures fair ratings recognized worldwide. Compete locally and globally.</p>
                 </div>
 
                 <div class="feature-card">
@@ -188,6 +187,7 @@
                     <ul>
                         <li><a href="features.html">Features</a></li>
                         <li><a href="rankings.html">Rankings</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="download.html">Download</a></li>
                     </ul>
                 </div>
@@ -213,6 +213,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 
