--- a/features.html
+++ b/features.html
@@ -33,6 +33,7 @@
                 <a href="features.html" style="color: var(--primary);">Features</a>
                 <a href="community.html">Community</a>
                 <a href="rankings.html">Rankings</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="download.html">Download</a>
             </div>
             <a href="download.html" class="btn btn-primary">Get Started</a>
@@ -61,8 +62,7 @@
                         <i class="fa-solid fa-trophy"></i>
                     </div>
                     <h3>Global Rankings</h3>
-                    <p>See where you stand locally and globally. Our sophisticated ELO-based ranking system ensures fair
-                        and accurate player ratings. Climb the ladder and earn badges for your achievements.</p>
+                    <p>See where you stand locally and globally. Our proprietary ranking system, based on match results, player statistics, and competitive performance, ensures fair and objective player ratings that are recognized worldwide. Climb the ladder and earn badges for your achievements.</p>
                 </div>
 
                 <!-- Feature 2 -->
@@ -178,6 +178,7 @@
                     <ul>
                         <li><a href="features.html">Features</a></li>
                         <li><a href="rankings.html">Rankings</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="download.html">Download</a></li>
                     </ul>
                 </div>
@@ -203,6 +204,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 
