--- a/pricing.html
+++ b/pricing.html
@@ -130,6 +130,7 @@
                 <a href="features.html">Features</a>
                 <a href="community.html">Community</a>
                 <a href="rankings.html">Rankings</a>
+                <a href="pricing.html" style="color: var(--primary);">Pricing</a>
                 <a href="download.html">Download</a>
             </div>
             <a href="download.html" class="btn btn-primary">Get Started</a>
@@ -192,12 +193,6 @@
             <h2 style="text-align: center; margin-bottom: 3rem;">Frequently Asked Questions</h2>
 
             <div class="feature-card" style="margin-bottom: 1.5rem;">
-                <h3 style="color: var(--primary); margin-bottom: 1rem;">Is there a free trial?</h3>
-                <p style="color: var(--text-muted); margin: 0;">Yes! Download the app and get a 7-day free trial to
-                    explore all features before committing to a subscription.</p>
-            </div>
-
-            <div class="feature-card" style="margin-bottom: 1.5rem;">
                 <h3 style="color: var(--primary); margin-bottom: 1rem;">Can I cancel anytime?</h3>
                 <p style="color: var(--text-muted); margin: 0;">Absolutely. You can cancel your subscription at any time
                     from your account settings. No questions asked.</p>
@@ -223,9 +218,8 @@
             <div class="cta-card">
                 <div style="position: relative; z-index: 2;">
                     <h2>Ready to Elevate Your Game?</h2>
-                    <p style="max-width: 600px; margin: 1rem auto 2rem; color: #cbd5e1;">Start your 7-day free trial
-                        today. No credit card required.</p>
-                    <a href="download.html" class="btn btn-primary">Start Free Trial</a>
+                    <p style="max-width: 600px; margin: 1rem auto 2rem; color: #cbd5e1;">Join thousands of players who are already tracking their progress and finding better matches with RacketRank.</p>
+                    <a href="download.html" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
         </div>
@@ -247,6 +241,7 @@
                     <ul>
                         <li><a href="features.html">Features</a></li>
                         <li><a href="rankings.html">Rankings</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="download.html">Download</a></li>
                     </ul>
                 </div>
@@ -272,6 +267,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 
