--- a/terms.html
+++ b/terms.html
@@ -65,6 +65,7 @@
                 <a href="index.html#features">Features</a>
                 <a href="index.html#community">Community</a>
                 <a href="index.html#rankings">Rankings</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="index.html#download">Download</a>
             </div>
             <a href="index.html#get-started" class="btn btn-primary">Get Started</a>
@@ -132,6 +133,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 
