--- a/cookies.html
+++ b/cookies.html
@@ -92,6 +92,7 @@
                 <a href="features.html">Features</a>
                 <a href="community.html">Community</a>
                 <a href="rankings.html">Rankings</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="download.html">Download</a>
             </div>
             <a href="download.html" class="btn btn-primary">Get Started</a>
@@ -213,6 +214,7 @@
                     <ul>
                         <li><a href="features.html">Features</a></li>
                         <li><a href="rankings.html">Rankings</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="download.html">Download</a></li>
                     </ul>
                 </div>
@@ -238,6 +240,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 
