--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="description"
         content="The ultimate platform for racket sports enthusiasts. Track rankings, find matches, and join the global community.">
 
+    <!-- Preload critical assets -->
+    <link rel="preload" href="assets/bg4.jpg" as="image" fetchpriority="high">
+    <link rel="preload" href="assets/ball.png" as="image">
+    
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,6 +37,7 @@
                 <a href="features.html">Features</a>
                 <a href="community.html">Community</a>
                 <a href="rankings.html">Rankings</a>
+                <a href="pricing.html">Pricing</a>
                 <a href="download.html">Download</a>
             </div>
             <a href="download.html" class="btn btn-primary">Get Started</a>
@@ -55,20 +60,19 @@
                             Android</a>
                     </div>
 
+                    <!-- Avatar section commented out - may be used later
                     <div style="margin-top: 3rem; display: flex; align-items: center; gap: 1rem;">
                         <div style="display: flex; margin-left: 10px;">
-                            <img src="assets/pp1.jpg" alt="Player"
-                                style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #ff6b35;">
-                            <img src="assets/pp2.jpg" alt="Player"
-                                style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #ff8555; margin-left: -18px;">
-                            <img src="assets/pp3.jpg" alt="Player"
-                                style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #ffa500; margin-left: -18px;">
+                            <div style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #ff6b35; background: rgba(204, 255, 0, 0.2); display: flex; align-items: center; justify-content: center; color: var(--primary); font-weight: 600; font-size: 0.9rem;">S.M</div>
+                            <div style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #ff8555; margin-left: -18px; background: rgba(204, 255, 0, 0.2); display: flex; align-items: center; justify-content: center; color: var(--primary); font-weight: 600; font-size: 0.9rem;">J.K</div>
+                            <div style="width: 50px; height: 50px; border-radius: 50%; border: 3px solid #ffa500; margin-left: -18px; background: rgba(204, 255, 0, 0.2); display: flex; align-items: center; justify-content: center; color: var(--primary); font-weight: 600; font-size: 0.9rem;">M.L</div>
                         </div>
                         <p style="margin: 0; font-size: 0.9rem;">Trusted by <strong>10,000+</strong> players</p>
                     </div>
+                    -->
                 </div>
                 <div class="hero-image" style="display: flex; justify-content: center; align-items: center;">
-                    <img src="assets/applogo.png" alt="RacketRank App Logo"
+                    <img src="assets/phone.png" alt="RacketRank App"
                         style="max-width: 300px; border: none; box-shadow: none; animation: float 6s ease-in-out infinite;">
                 </div>
             </div>
@@ -168,6 +172,7 @@
                     <ul>
                         <li><a href="features.html">Features</a></li>
                         <li><a href="rankings.html">Rankings</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="download.html">Download</a></li>
                     </ul>
                 </div>
@@ -193,6 +198,7 @@
             </div>
         </div>
     </footer>
+
 
 </body>
 
